WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186413
[iOS] Unable to present the share sheet after saving a PDF to Files.app
https://bugs.webkit.org/show_bug.cgi?id=186413
Summary
[iOS] Unable to present the share sheet after saving a PDF to Files.app
Andy Estes
Reported
2018-06-07 15:17:00 PDT
[iOS] Unable to present the share sheet after saving a PDF to Files.app
Attachments
Patch
(5.34 KB, patch)
2018-06-07 15:28 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2018-06-07 15:17:53 PDT
rdar://problem/39937488
Andy Estes
Comment 2
2018-06-07 15:28:25 PDT
Created
attachment 342211
[details]
Patch
WebKit Commit Bot
Comment 3
2018-06-07 16:24:00 PDT
Comment on
attachment 342211
[details]
Patch Clearing flags on attachment: 342211 Committed
r232607
: <
https://trac.webkit.org/changeset/232607
>
WebKit Commit Bot
Comment 4
2018-06-07 16:24:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug